DevOps/drone/drone-cert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone
