DevOps/drone/drone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone-server
  name: drone-server
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      ###
      # 映射域名，防止访问报错，适用于内网部署
      hostAliases: 
      - ip: 192.168.0.2
        hostnames:
        - drone.example.io
        - gitea.example.io
        - runner.example.io
      ###
      containers:
      - image: drone/drone:latest
        imagePullPolicy: IfNotPresent
        name: drone-server
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: drone-persistent-storage
          mountPath: /data
      volumes:
      - name: drone-persistent-storage
        persistentVolumeClaim:
          claimName: drone-server-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: drone
  labels:
    app: drone-runner
spec:
  selector:
    matchLabels:
      app: drone-runner
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-runner
    spec:
      containers:
      - name: drone-runner
        image: docker.io/drone/drone-runner-kube:latest
        imagePullPolicy: IfNotPresent
