DevOps/drone/drone-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: devops
  labels:
    app: drone
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 8080
    protocol: TCP
    targetPort: http
  type: NodePort
