DevOps/drone/drone-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drone-server
  name: drone-server
  namespace: devops
spec:
  ports:
  - port: 80
    nodePort: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: drone-server
  type: NodePort
  
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drone-ingress
  namespace: devops
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drone.tjpengan.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: drone-server
          port: 80
